added login with local passport method and also added login page in ejs file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,11 +64,20 @@
 
 <div id="main">
     <div class="main">
-        <form action="/signup" method="post">
+        <form action="/" method="post">
 
             <h1>
                 Login
             </h1>
+
+            <% if(hasErrors) {%>
+                <div class='alert alert-danger text-center'>
+                    <a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>
+                    <% _.forEach(messages, function(error){ %>
+                        <%= error %><br>
+                    <% }) %>
+                </div>
+            <% } %>
 
             <div class="inset">
                 <p>
