--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/login.css">
 </head>
 
@@ -65,6 +66,11 @@
 <div id="main">
     <div class="main">
         <form action="/signup" method="post">
+            <h1>
+                <a href="#" class="btn-social btn-facebook btn-lg">
+                    <i class="fa fa-facebook"></i> Sign Up With Facebook
+                </a>
+            </h1>
 
             <h1>
                 Register
