--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -67,7 +67,7 @@
     <div class="main">
         <form action="/signup" method="post">
             <h1>
-                <a href="#" class="btn-social btn-facebook btn-lg">
+                <a href="/auth/facebook" class="btn-social btn-facebook btn-lg">
                     <i class="fa fa-facebook"></i> Sign Up With Facebook
                 </a>
             </h1>
