Upload files on client side using ajax

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -15,7 +15,7 @@
             <input type="text" name="country" placeholder="Country">
 
             <button class="btn btn-lg upload-btn" type="button">Upload File</button>
-            <input type="file" name="upload" id="upload-input" style="display: none;">
+            <input type="file" name="upload" id="upload-input" style="display:">
 
         </form>
     </div>
@@ -23,5 +23,6 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="/public/js/upload.js"></script>
 </body>
 </html>
