emit createMessage event from client side and this event listen on server side

--- a/views/groupchat/group.ejs
+++ b/views/groupchat/group.ejs
@@ -107,7 +107,7 @@
                             </div>
 
                             <div class="message_write">
-                              <form action="#" id="message-form" method="post">
+                              <form id="message-form" method="post">
 
                                   <textarea class="form-control" name="message" id="msg" placeholder="Type a message"></textarea>
                                   <div class="clearfix"></div>
