user can send message to a particular room

--- a/views/groupchat/group.ejs
+++ b/views/groupchat/group.ejs
@@ -108,6 +108,7 @@
 
                             <div class="message_write">
                               <form id="message-form" method="post">
+                                  <input type="hidden" id="groupName" value="<%= groupName %>">
 
                                   <textarea class="form-control" name="message" id="msg" placeholder="Type a message"></textarea>
                                   <div class="clearfix"></div>
