added css and html file to show message in page

--- a/views/groupchat/group.ejs
+++ b/views/groupchat/group.ejs
@@ -103,7 +103,20 @@
                             </div>
 
                             <div class="chat_area">
-                            
+                                <ul id="messages" class="list-unstyled">
+                                    <li class="left">
+                                        <span class="chat-imgl pull-left">
+                                            <img src="http://placehold.it/300*300" class="img-circle" alt="">
+                                        </span>
+                                        <div class="chat-body1">
+                                            <span class="chat-name">
+                                                Username
+                                            </span>
+                                            <br>
+                                            Message Body
+                                        </div>
+                                    </li>
+                                </ul>
                             </div>
 
                             <div class="message_write">
