--- a/public/css/group.css
+++ b/public/css/group.css
@@ -128,6 +128,12 @@ h3 {
     padding-bottom: 10px;
 }
 
+.chat-name{
+    font-size: 17px;
+    font-weight: 600;
+    color: #4aa1f3;
+}
+
 .message_write {
     background: white none repeat scroll 0 0;
     float: left;
